fix for footer middot "not showing" when in responsive

--- a/web/app/website/bluesky/css/style.css
+++ b/web/app/website/bluesky/css/style.css
@@ -88,7 +88,7 @@ a[href="javascript:;"].activate { cursor: pointer; }
 
 
 /*** colour schemes ***/
-/*#hed, .masthead h1.ui.header .sub.header,*/ #fot a.addrlnk, #socnav .ui.icon.button:hover, #mnav .tel.item:hover, .timeline-me-shortcontent { color: #fff !important; }
+/*#hed, .masthead h1.ui.header .sub.header,*/ #fot a.addrlnk, #socnav .ui.icon.button:hover, #mnav .tel.item:hover, .timeline-me-shortcontent, #fot.ui.inverted.segment .nodisp { color: #fff !important; }
 #snav .header.item.logo, #socnav .ui.icon.button { background-color: #fff; }
 
 a, #socnav .ui.icon.button, #mnav.ui.secondary.pointing.menu .item:hover, #mnav.ui.secondary.pointing.menu .item.active { color: #4563cc; }
